# packages

net/bupd-server/: Makefile
net/cgi-io/: Makefile
net/hex2net/: Makefile
net/hex2net/src/: CMakeLists.txt  hex2net.c
net/mbt/: Makefile
net/mcjoin/: Makefile
net/smcroute/: Makefile
utils/collectd/: Makefile
utils/collectd/files/: collectd.init  collectd.uci
utils/collectd/patches/: 950-add-nftables-plugin-1.patch  950-add-nftables-plugin-2.patch  950-add-nftables-plugin-3.patch  950-add-nftables-plugin-4.patch  950-add-nftables-plugin-5.patch  950-add-nftables-plugin-6.patch  950-add-nftables-plugin-7.patch  950-add-nftables-plugin-8.patch
utils/xxhash/: Makefile
